--- a/app/views/boq/daftar.phtml
+++ b/app/views/boq/daftar.phtml
@@ -77,7 +77,7 @@ $this->start ('contents');
                                 <?php if( $approval ): ?>
                                     <a href="<?= $this->pathFor('BOQTender_detailApproval' , ['id_tender'=>$tender['id_tender']]) ?>" class="btn btn-space btn-primary"><i class="icon icon-left mdi mdi-check-circle" style="color:#fff;"></i> Approve</a>
                                 <?php else: ?>
-                                    <?php if($this->checkPenugasan($tender['id_tender'], $active_user_data['id_user'])): ?>
+                                    <?php if($this->checkPenugasan($tender['id_tender'], $active_user_data['id_user']) || $active_user_data[ 'previledge' ] == '3'): ?>
                                         <a href="<?= $this->pathFor('BOQTender_detail' , ['id_tender'=>$tender['id_tender']]) ?>" class="btn btn-space btn-primary"><i class="icon icon-left mdi mdi-eye" style="color:#fff;"></i> Detail</a>
                                     <?php else: ?>
                                         Bukan Tugas Anda
