--- a/app/views/navbar.phtml
+++ b/app/views/navbar.phtml
@@ -49,7 +49,7 @@
                         </li>
                         <?php endif; ?>
 
-                        <?php if (in_array ($active_user_data[ 'previledge' ], ['4'])): ?>
+                        <?php if (in_array ($active_user_data[ 'previledge' ], ['3', '4'])): ?>
                             <li class="<?= $this->uri (0, 'boq', 'parent active open') ?>">
                                 <a href="<?= $this->pathFor ('BOQTender_daftar') ?>">
                                     <i class="icon mdi mdi-shopping-cart"></i><span>Penenturan BOQ</span>
